--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Yondev — Blog</title>
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="src/assets/images/favicon.ico" type="image/x-icon" />
   <meta name="color-scheme" content="light" />
   <meta name="theme-color" content="#ffffff" />
 
