--- a/services.html
+++ b/services.html
@@ -6,6 +6,7 @@
   <title>Yondev: Build Better</title>
   <link rel="icon" href="src/assets/images/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="src/assets/css/style.css" />
+  <link rel="stylesheet" href="src/assets/css/blob-sections.css" />
 
    <!-- Manrope (modern, legible) -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -16,6 +17,7 @@
 
 </head>
 <body>
+  <script src="src/js/blob-sections.js"></script>
   <script type="module" src="src/js/services.js"></script>
 </body>
 </html>
