Update favicon block in index.html for best browser compatibility

--- a/services.html
+++ b/services.html
@@ -4,15 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Yondev: Build Better</title>
-  <!-- Favicons for all platforms -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/yondev.com/src/assets/images/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/yondev.com/src/assets/images/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/yondev.com/src/assets/images/favicon/favicon-16x16.png">
-  <link rel="manifest" href="/yondev.com/src/assets/images/favicon/site.webmanifest">
-  <link rel="mask-icon" href="/yondev.com/src/assets/images/favicon/safari-pinned-tab.svg" color="#ffcf40">
-  <link rel="shortcut icon" href="/yondev.com/src/assets/images/favicon/favicon.ico">
-  <meta name="msapplication-TileColor" content="#ffcf40">
-  <meta name="msapplication-config" content="/yondev.com/src/assets/images/favicon/browserconfig.xml">
+  <!-- Favicons for all platforms (local paths) -->
+  <link rel="apple-touch-icon" sizes="180x180" href="src/assets/images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="src/assets/images/favicon/favicon-96x96.png">
+  <link rel="icon" type="image/svg+xml" href="src/assets/images/favicon/favicon.svg">
+  <link rel="icon" type="image/x-icon" href="src/assets/images/favicon/favicon.ico">
   <meta name="theme-color" content="#ffcf40">
   <link rel="stylesheet" href="src/assets/css/style.css" />
 
